ST-141 refine StockTrader.